<resources>
    <string name="app_name">Templates 4 Success</string>
    <string name="Welcome">Welcome to Templates 4 Success</string>
    <string name="subtitle">Enter Your Login Info Below</string>
    <string name="email_prompt">Email</string>
    <string name="password_login">Password</string>
    <string name="enter">Sign In</string>
    <string name="selector">Select Which College You Would Like To Write Essay For</string>
    <string name="A">Reccomendation Letter</string>
    <string name="B">College B</string>
    <string name="college_c">College C</string>
    <string name="college_d">College D</string>
    <string name="college_e">College E</string>
    <string name="college_f">College F</string>
    <string name="college_g">College G</string>
    <string name="title_input_list">Inputs</string>
    <string name="title_input_detail">Input Detail</string>
    <string name="title_activity_inputs">Inputs</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_essay_outputs">EssayOutputs</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
